[metadata]
name = xtesting
author = OPNFV
author-email = opnfv-tech-discuss@lists.opnfv.org
home-page = https://wiki.opnfv.org/display/functest

[files]
packages = xtesting

[entry_points]
console_scripts =
    run_tests = xtesting.ci.run_tests:main

[build_sphinx]
all_files = 1
build-dir = api/_build/
source-dir = api

[wheel]
universal = 1
