[metadata]
name = xtesting
summary = OPNFV reference testing framework
description-file =
    README.rst
author = OPNFV
author-email = opnfv-tech-discuss@lists.opnfv.org
home-page = https://wiki.opnfv.org/display/functest
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = xtesting

[entry_points]
console_scripts =
    run_tests = xtesting.ci.run_tests:main
    zip_campaign = xtesting.core.campaign:main
xtesting.testcase =
    bashfeature = xtesting.core.feature:BashFeature
    robotframework = xtesting.core.robotframework:RobotFramework
    behaveframework = xtesting.core.behaveframework:BehaveFramework
    unit = xtesting.core.unit:Suite
    first = xtesting.samples.first:Test
    second = xtesting.samples.second:Test
    mts = xtesting.core.mts:MTSLauncher
    ansiblefeature = xtesting.core.ansibledriver:AnsibleFeature

[build_sphinx]
all_files = 1
build-dir = api/build/
source-dir = api

[wheel]
universal = 1
