[metadata]
name = xtesting
summary = OPNFV reference testing framework
description_file =
    README.rst
author = OPNFV
author_email = opnfv-tech-discuss@lists.opnfv.org
home_page = https://wiki.opnfv.org/display/functest
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[files]
packages = xtesting

[entry_points]
console_scripts =
    run_tests = xtesting.ci.run_tests:main
    zip_campaign = xtesting.core.campaign:main
xtesting.testcase =
    bashfeature = xtesting.core.feature:BashFeature
    robotframework = xtesting.core.robotframework:RobotFramework
    behaveframework = xtesting.core.behaveframework:BehaveFramework
    unit = xtesting.core.unit:Suite
    first = xtesting.samples.first:Test
    second = xtesting.samples.second:Test
    mts = xtesting.core.mts:MTSLauncher
    ansible = xtesting.core.ansible:Ansible

[build_sphinx]
all_files = 1
build-dir = api/build/
source-dir = api

[wheel]
universal = 1
